--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -48,8 +48,9 @@
                     android:layout_marginLeft="4dp"
                     android:layout_marginTop="10dp"
                     android:gravity="center"
-                    android:text="MyTravels"
-                    android:textColor="#000000"
+                    android:text="@string/app_name"
+                    android:textColor="#252122"
+                    android:textStyle="bold"
                     android:textSize="24sp" />
 
 
