--- a/app/src/main/res/menu/activity_login_drawer.xml
+++ b/app/src/main/res/menu/activity_login_drawer.xml
@@ -7,13 +7,13 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="Informações perfil" />
         <item
-            android:id="@+id/nav_visited"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Países visitados" />
+            android:id="@+id/nav_favorites"
+            android:icon="@drawable/ic_favorites"
+            android:title="Meus filmes" />
         <item
-            android:id="@+id/nav_list"
-            android:icon="@drawable/ic_coutries"
-            android:title="Lista de países" />
+            android:id="@+id/nav_search"
+            android:icon="@drawable/ic_search"
+            android:title="Pesquisar filme" />
 
     </group>
 
