--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,8 +5,8 @@
         <!-- Customize your theme here. -->
         <!--<item name="colorPrimary">@color/colorPrimary</item>-->
         <!--<item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
-        <item name="colorPrimary">#FA6C02</item>
-        <item name="colorPrimaryDark">#FA6C02</item>
+        <item name="colorPrimary">#0000CD</item>
+        <item name="colorPrimaryDark">#00008B</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
@@ -28,7 +28,7 @@
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="CountryItem">
+    <style name="MovieItem">
         <item name="android:layout_height">40dp</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:layout_margin">2dp</item>
